<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAECE2"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/toolbar_reg"
        android:layout_width="411dp"
        android:layout_height="388dp"
        android:layout_marginBottom="391dp"
        android:background="@drawable/shape_for_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/hello_reader_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/hello_reader"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hello_reader_reg"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/name_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_for_edit_text"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_reg" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_for_edit_text"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/name_reg"
        app:layout_constraintStart_toStartOf="@+id/name_reg"
        app:layout_constraintTop_toBottomOf="@+id/name_reg" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_for_edit_text"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/email_reg"
        app:layout_constraintStart_toStartOf="@+id/email_reg"
        app:layout_constraintTop_toBottomOf="@+id/email_reg" />

    <EditText
        android:id="@+id/confirm_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_for_edit_text"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/password_reg"
        app:layout_constraintStart_toStartOf="@+id/password_reg"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <Button
        android:id="@+id/registerAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_for_login_btn"
        android:padding="16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_reg"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_reg"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_reg" />

</androidx.constraintlayout.widget.ConstraintLayout>